--- a/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/index.html
+++ b/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/index.html
@@ -58,13 +58,13 @@
                     <a href="javascript:;"><i class="layui-icon">&#xe620;</i>基础</a>
                     <dl class="layui-nav-child">
                         <dd>
-                            <a href="javascript:;" href-url="/user/user">
+                            <a href="javascript:;" href-url="/user/list">
                                 <i class="layui-icon">&#xe621;</i>用户列表
                             </a>
                         </dd>
                         <dd>
-                            <a href="javascript:;" href-url="/data-table">
-                                <i class="layui-icon">&#xe621;</i>表格列表
+                            <a href="javascript:;" href-url="/dept/list">
+                                <i class="layui-icon">&#xe621;</i>部门列表
                             </a>
                         </dd>
                         <dd>
