--- a/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/user/edit.html
+++ b/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/user/edit.html
@@ -5,24 +5,21 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>用户新增页面</title>
+    <title>用户编辑页面</title>
     <link rel="stylesheet" href="/frame/layui/css/layui.css">
     <link rel="stylesheet" href="/frame/static/css/style.css">
     <link rel="icon" href="/frame/static/image/code.png">
 </head>
 <body class="body">
 <form class="layui-form layui-form-pane" action="">
+    <input id="userId" name="userId" th:value="${uservo.userId}"
+           type="hidden">
     <div class="layui-form-item">
         <label class="layui-form-label">用户名</label>
         <div class="layui-input-inline">
-            <input type="text" name="username" lay-verify="username" placeholder="请输入用户名"
-                   autocomplete="off" class="layui-input">
-        </div>
-    </div>
-    <div class="layui-form-item">
-        <label class="layui-form-label">密码</label>
-        <div class="layui-input-inline">
-            <input type="password" name="newpassword1" lay-verify="pass" placeholder="请输入密码"
+            <input name="username" lay-verify="username"
+                   th:value="${uservo.username}"
+                   placeholder="请输入用户名"
                    autocomplete="off" class="layui-input">
         </div>
     </div>
@@ -31,8 +28,18 @@
         <label class="layui-form-label">手机号</label>
         <div class="layui-input-inline">
             <input name="phone"
+                   th:value="${uservo.phone}"
                    autocomplete="off" class="layui-input" type="tel">
         </div>
+    </div>
+
+    <div class="layui-form-item">
+        <label class="layui-form-label">状态</label>
+        <div class="layui-input-inline">
+            <input th:field="*{uservo.delFlag}" name="delFlag" value="0" title="有效" type="radio">
+            <input th:field="*{uservo.delFlag}" name="delFlag" value="1" title="无效" type="radio">
+        </div>
+    </div>
     </div>
     <div class="layui-form-item">
         <div class="layui-input-block">
@@ -44,6 +51,6 @@
 
 <script src="/frame/layui/layui.js" charset="utf-8"></script>
 <script src="/jquery.min.js"></script>
-<script type="text/javascript" src="/js/sys/user/add.js"></script>
+<script type="text/javascript" src="/js/sys/user/edit.js"></script>
 </body>
 </html>
