--- a/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/user/list.html
+++ b/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/user/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh_CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
@@ -16,47 +16,42 @@
 <!-- 工具集 -->
 <div class="my-btn-box">
     <span class="fl">
-        <button class="layui-btn layui-btn-danger radius btn-delect" id="btn-delete-all">批量删除</button>
-        <button class="layui-btn btn-add btn-default" id="btn-add">添加</button>
-        <a class="layui-btn btn-add btn-default" id="btn-refresh"><i class="layui-icon">&#x1002;</i></a>
+        <button class="layui-btn btn-add btn-default" data-type="reload" id="btn-add">添加</button>
+        <button class="layui-btn btn-add btn-default" id="btn-refresh"><i class="layui-icon">&#x1002;</i></button>
     </span>
     <span class="fr">
-        <span class="layui-form-label">搜索条件：</span>
+        <span class="layui-form-label">用户名：</span>
         <div class="layui-input-inline">
-            <input type="text" autocomplete="off" placeholder="请输入搜索条件" class="layui-input">
+            <input type="text" autocomplete="off" id="username"  placeholder="用户名" class="layui-input">
         </div>
-        <button class="layui-btn mgl-20">查询</button>
+        <button class="layui-btn mgl-20" data-type="reload">查询</button>
     </span>
 </div>
 
-
 <!-- 表格 -->
-<div id="dateTable"></div>
+<table class="layui-hide" id="dateTable" lay-filter="userTable"></table>
+
+<!--指向自定义工具栏模板选择器-->
+<!--<div th:include="add :: add"></div>-->
+<!--<div th:include="include :: footer"></div>-->
 <script type="text/javascript" src="/frame/layui/layui.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
-<script type="text/javascript" src="/js/sys/common/data-format.js"></script>
 <script type="text/javascript" src="/js/sys/user/user.js"></script>
 
+<!--<head th:include="include :: ListTextHtml"></head>-->
 <!--  状态 -->
 <script type="text/html" id="delFlag">
     {{#  if(d.delFlag == 0){ }}
-    <span style="color: #00C0F7;">正常</span>
+    <span style="color: #00C0F7;">有效</span>
     {{#  } else { }}
-    <span style="color: #c00;">删除</span>
+    <span style="color: #c00;">无效</span>
     {{#  } }}
 </script>
+
 <!-- 表格操作按钮集 -->
 <script type="text/html" id="barOption">
-    <a class="layui-btn layui-btn-mini" lay-event="detail">查看</a>
     <a class="layui-btn layui-btn-mini layui-btn-normal" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-mini layui-btn-danger" lay-event="del">删除</a>
 </script>
-<script type="text/html" id="indexTpl">
-    {{d.LAY_TABLE_INDEX+1}}
-</script>
-
-
-
-
 </body>
 </html>
