--- a/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/index.html
+++ b/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/index.html
@@ -73,8 +73,8 @@
                             </a>
                         </dd>
                         <dd>
-                            <a href="javascript:;" href-url="demo/table.html">
-                                <i class="layui-icon">&#xe621;</i>表格
+                            <a href="javascript:;" href-url="/menu/list">
+                                <i class="layui-icon">&#xe621;</i>菜单管理
                             </a>
                         </dd>
                         <dd>
