--- a/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/role/list.html
+++ b/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/role/list.html
@@ -28,7 +28,7 @@
 </div>
 
 <!-- 表格 -->
-<table class="layui-hide" id="dateTable" lay-filter="dataTable"></table>
+<table class="layui-hide" id="dateTable" lay-filter="roleTable"></table>
 
 <!--指向自定义工具栏模板选择器-->
 <!--<div th:include="add :: add"></div>-->
