--- a/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/dept/edit.html
+++ b/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/dept/edit.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>部门新增页面</title>
+    <title>部门编辑页面</title>
     <link rel="stylesheet" href="/frame/layui/css/layui.css">
     <link rel="stylesheet" href="/frame/static/css/style.css">
     <link rel="icon" href="/frame/static/image/code.png">
