--- a/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/dept/tree.html
+++ b/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/dept/tree.html
@@ -20,11 +20,13 @@
                             <input type="text" autocomplete="off" placeholder="请输入搜索条件" class="layui-input">
                         </div>
                         <button class="layui-btn mgl-20" id="queryMenu">查询</button>
+                        <button class="layui-btn layui-btn-primary" id="binReturn">返回</button>
                     </span>
         </div>
         <div class="layui-row">
             <ul id="tree" class="tree-table-tree-box"></ul>
         </div>
+
         <!-- tree -->
     </div>
 </div>
