--- a/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/role/list.html
+++ b/SpringCloudDemo/cloud_modules/itdj-upms-server/src/main/resources/templates/views/role/list.html
@@ -42,7 +42,7 @@
 <script type="text/html" id="barOption">
     <a class="layui-btn layui-btn-mini layui-btn-normal" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-mini layui-btn-danger" lay-event="del">删除</a>
-    <a class="layui-btn layui-btn-mini layui-btn-danger" lay-event="del">权限</a>
+    <a class="layui-btn layui-btn-mini layui-btn-warm" lay-event="authorities">权限</a>
 </script>
 </body>
 </html>
